hopefully fixed button and text cutting off issues

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -181,10 +181,10 @@
     1px 1px 0 #000;
   }
 
-#playerList {
-  margin-top: 0vh;
-  background-color: darkcyan;
-}
+  #playerList {
+    margin-top: 0vh;
+    background-color: darkcyan;
+  }
 
   #goToRideTheBus {
     position: absolute;
@@ -283,7 +283,6 @@
   1px 1px 0 #000;
   clear: both;
   display: inline-block;
-  overflow: hidden;
   white-space: nowrap;
 }
 
@@ -304,7 +303,6 @@
   1px 1px 0 #000;
   clear: both;
   display: inline-block;
-  overflow: hidden;
   white-space: nowrap;
 }
 
@@ -325,7 +323,6 @@
   1px 1px 0 #000;
   clear: both;
   display: inline-block;
-  overflow: hidden;
   white-space: nowrap;
 }
 
@@ -364,7 +361,6 @@
   1px 1px 0 #000;
   clear: both;
   display: inline-block;
-  overflow: hidden;
   white-space: nowrap;
 }
 
@@ -446,6 +442,7 @@
     background-color: red;
     color: white;
     border: 1vh solid white;
+    white-space: nowrap;
   }
 
   #black_button {
@@ -461,6 +458,7 @@
     background-color: black;
     color: white;
     border: 1vh solid white;
+    white-space: nowrap;
   }
 
   #cardBack1 {
@@ -524,6 +522,7 @@
   background-color: white;
   color: black;
   border: 1vh solid black;
+  white-space: nowrap;
 }
 
 #under_button {
@@ -539,6 +538,7 @@
   background-color: white;
   color: black;
   border: 1vh solid black;
+  white-space: nowrap;
 }
 
 #cardBack2 {
@@ -578,6 +578,7 @@
   background-color: white;
   color: black;
   border: 1vh solid black;
+  white-space: nowrap;
 }
 
 #hearts_button {
@@ -593,6 +594,7 @@
   background-color: white;
   color: red;
   border: 1vh solid red;
+  white-space: nowrap;
 }
 
 #clubs_button {
@@ -608,6 +610,7 @@
   background-color: white;
   color: black;
   border: 1vh solid black;
+  white-space: nowrap;
 }
 
 #diamonds_button {
@@ -623,6 +626,7 @@
   background-color: white;
   color: red;
   border: 1vh solid red;
+  white-space: nowrap;
 }
 
 #hand3 {
